--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,22 +10,24 @@
     <meta name="description" content="DankTank is very dank.">
 
     <!-- Page Title -->
-    <title>DankTank Login</title>
+    <title>DankTank</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../pictures/logo.jpg" type="image/x-icon"> 
+    <link rel="icon" href="static/pictures/logo.jpg" type="image/x-icon">
 
     <!-- OrgSync Styles, Bootstrap, and Custom Stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css"> 
+    <link rel="stylesheet" href="static/css/stylesheet.css" type="text/css">
 
     <!-- JavaScript to only show body once page is loaded -->
+
     <script type="text/javascript" async>
-      document.addEventListener("DOMContentLoaded", function(event) { 
+      document.addEventListener("DOMContentLoaded", function(event) {
         document.getElementById("body").style.visibility = "visible";
       });
     </script>
+
 </head>
 <header>
   <nav class="navbar navbar-default navbar-fixed-top">
@@ -38,28 +40,28 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">
-          <img alt="DankTank" src="../pictures/logo.jpg" height="100%;">
+        <a class="navbar-brand" href="{{ url_for('show_post') }}">
+          <img alt="DankTank" src="static/pictures/logo.jpg" height="100%;">
         </a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="{{ url_for('show_post') }}">Home</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Browse <span class="caret"></span></a>
             <ul class="dropdown-menu">
-            	<li><a href="#">Dankest</a></li>
-            	<li><a href="#">Dustiest</a></li>
+            	<li><a href="{{ url_for('show_post') }}?dank_rank=dankest">Dankest</a></li>
+            	<li><a href="{{ url_for('show_post') }}?dank_rank=dustiest">Dustiest</a></li>
             	<li><a href="categories.html">Categories</a></li>
             </ul>
           </li>
           <li><a href="#">Random</a></li>
-          <li><a href="submit.html">Submit</a></li>
+          <li><a href="{{ url_for('add_entry') }}">Submit</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-        	<li><a href="login.html">Login</a></li>
+        	<li><a href="{{ url_for('login') }}">Login</a></li>
           	<li><a class="social_icons" href="mailto:info@gwtechcollective.org"><i class="fa fa-envelope-square fa-2x"></i></a></li>
           	<li><a class="social_icons" target="_blank" href="https://www.facebook.com/groups/gwtechcollective"><i class="fa fa-facebook-square fa-2x"></i></a></li>
         </ul>
@@ -67,43 +69,20 @@
     </div><!-- /.container-fluid -->
   </nav>
 </header>
+
 <body>
 	<div class="header-img">
-		<img id="DankTank" class="img-responsive center-block" src="../pictures/header.svg">
+		<img id="DankTank" class="img-responsive center-block" src="static/pictures/header.svg">
 	</div>
 
-	<div class="container" id="body">
-		<div class="row">
-			<div class="col-sm-8">
-				<h1><em>DankTank Login</em></h1><hr><br>
-        <div class="panel panel-default center-block panel-login">
-          <div class="panel-body">
-            <div class="form-group">
-              <label for="usr">Dankername:</label>
-              <input type="text" class="form-control" id="usr">
-            </div>
-            <div class="form-group">
-              <label for="pwd">Password:</label>
-              <input type="password" class="form-control" id="pwd">
-            </div>
-            <button type="button" class="btn btn-primary">Login</button>
-          </div>
-        </div>
-			</div>
-			<div class="col-sm-4" id="sidebar">
-			    <div id="tweets">
-			    	<a class="twitter-timeline" href="https://twitter.com/GWTechies" data-widget-id="373284789756755968">Tweets by @GWTechies</a>
-					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-					</script>
-				</div>
-				<img id="logo" class="img-responsive center-block" src="../pictures/logo.jpg">
-			</div>
-		</div>
-	</div>
+	{% block body %}{% endblock %}
+
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+	<script src="/static/js/vote.js"></script>
 </body>
 <footer class="footer">
     <div class="navbar-default navbar-bottom" role="navigation">
@@ -111,9 +90,9 @@
             <div class="row">
                 <div class="col-md-4 col-sm-12 footer-col">
                     <div class="inner">
-                        <a href="#top">Top of Page</a> | 
-                        <a href="browse.html">Browse</a> | 
-                        <a href="random.html">Random</a> | 
+                        <a href="#top">Top of Page</a> |
+                        <a href="browse.html">Browse</a> |
+                        <a href="random.html">Random</a> |
                         <a href="submit.html">Submit</a>
                     </div>
                 </div>
