Added categories page to flask

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,7 +54,7 @@
             <ul class="dropdown-menu">
             	<li><a href="{{ url_for('show_post') }}?dank_rank=dankest">Dankest</a></li>
             	<li><a href="{{ url_for('show_post') }}?dank_rank=dustiest">Dustiest</a></li>
-            	<li><a href="categories.html">Categories</a></li>
+            	<li><a href="{{ url_for('show_categories') }}">Categories</a></li>
             </ul>
           </li>
           <li><a href="#">Random</a></li>
