Added registration backend

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -7,7 +7,7 @@
       <h1><em>DankTank Registration</em></h1><hr><br>
       <div class="panel panel-default center-block panel-login">
         <div class="panel-body">
-          <form action="{{ url_for('registration') }}" method=post>
+          <form action="{{ url_for('register') }}" method=post>
             <div class="form-group">
               <label for="usr">Dankername:</label>
               <input type="text" class="form-control" id="usr" name="username">
