Revert "fixed misnamed link to js file"
This reverts commit f537e321de5dc4832827c88482aaa8cbd8353693.

# Conflicts:
#	danksite.py

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -86,7 +86,7 @@
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-	<script src="/static/js/votes.js"></script>
+	<script src="/static/js/vote.js"></script>
 </body>
 <footer class="footer">
     <div class="navbar-default navbar-bottom" role="navigation">
